stderr
JudgeMan.java:1: error: class, interface, enum, or record expected
wimport java.util.Arrays;
^
JudgeMan.java:9: error: illegal start of expression
        if(hand.equals({"H2", "D3", "C4", "S5", "H6"})){
                       ^
JudgeMan.java:9: error: not a statement
        if(hand.equals({"H2", "D3", "C4", "S5", "H6"})){
                        ^
JudgeMan.java:9: error: ';' expected
        if(hand.equals({"H2", "D3", "C4", "S5", "H6"})){
                            ^
JudgeMan.java:9: error: illegal start of expression
        if(hand.equals({"H2", "D3", "C4", "S5", "H6"})){
                                                     ^
5 errors
